# hagfish

./: README.md  hagfish.cabal  hie.yaml  stack.yaml
app/: Main.hs
src/: Board.hs  Chess.hs  ChessEngine.hs  ChessStrategy.hs  Console.hs  Engine.hs  Evaluate.hs  Game.hs  Strategy.hs
test/: Spec.hs
