cabal-version:  2.2
name:           hagfish
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/cis5520-hagfish/hagfish#readme>
homepage:       https://github.com/cis5520-hagfish/hagfish#readme
bug-reports:    https://github.com/cis5520-hagfish/hagfish/issues
author:         Yuhao Liu, Gefei Zhu 
maintainer:     liuyuhao@seas.upenn.edu, kenzgf@seas.upenn.edu
copyright:      2024 Yuhao Liu, Gefei Zhu
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/cis5520-hagfish/hagfish

common common-stanza
  ghc-options:         -Wno-type-defaults -fwarn-incomplete-patterns
  build-depends:
      base >=4.15
    , HUnit 
    , QuickCheck
    , containers
    , filepath
    , pretty
    , network
    , directory
    , random
    , mtl
    , doctest
    , chessIO
    , ansi-terminal
    , parsec
    , vector
  default-language:
    GHC2021
  default-extensions:


library
  import:
      common-stanza
  exposed-modules:
      Game
    , Strategy
    , Chess
    , ChessStrategy
    , Engine
    , ChessEngine
    , Console
      -- if you add modules to your project, list them here
      -- so that they will be available to the executable and test suite
  hs-source-dirs:
      src

executable hagfish-exe
  import:
      common-stanza
  main-is: 
      Main.hs
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      hagfish


test-suite hagfish-test
  import:
      common-stanza
  type: 
      exitcode-stdio-1.0
  main-is: 
      Spec.hs
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      hagfish

